# batmobile-evo

./: .gitignore  CONTRIBUTING.md  LICENSE  LLMS.txt  README.md  batmobile_oracle_A2.0.V2.6.2.ps1  batmobile_oracle_A2.0.V2.6.5.ps1  batmobile_oracle_A2.0.V2.6.6.ps1  batmobile_oracle_A2.0.V2.6.7.ps1  batmobile_oracle_A2.0.V2.6.9.ps1  batmobile_oracle_A2.0.V2.7.0.ps1  batmobile_oracle_A2.0.V2.7.2.ps1  batmobile_oracle_A2.0.V2.7.3.ps1  batmobile_oracle_A2.0.V2.7.5.ps1  pyproject.toml  setup.py
artifacts/: NEXT_ACTIONS_A2.0.V2.7.0.txt  REBOOT_REQUIRED.marker  build_oracle_A2.0.V2.4.3.json  build_ready_oracle_A2.0.V2.4.10.json  build_ready_oracle_A2.0.V2.4.9.json  failure_oracle_A2.0.V2.4.7.json  git_auth_out_A2.0.V2.5.1.txt  git_push_err_A2.0.V2.4.10.txt  latest_A2.0.V1.8.4.txt  latest_A2.0.V1.9.txt  latest_A2.0.V2.3.5.txt  latest_A2.0.V2.3.6.txt  latest_A2.0.V2.3.9.txt  latest_A2.0.V2.4.1.txt  oracle_A2.0.V2.5.2.json  oracle_A2.0.V2.5.3.json  oracle_A2.0.V2.5.4.json  oracle_A2.0.V2.5.7.json  oracle_A2.0.V2.5.8.json  oracle_A2.0.V2.6.0.json  oracle_A2.0.V2.6.2.json  oracle_A2.0.V2.6.6.json  oracle_A2.0.V2.6.7.json  oracle_A2.0.V2.6.9.json  oracle_A2.0.V2.7.0.json  oracle_A2_0_V2_5_1.json  oracle_reflect.json  oracle_truth_A2.0.V2.4.8.json  push_err_A2.0.V2.5.3.txt  toolchain_truth.json  toolchain_truth_A2.0.V2.4.4.json  toolchain_truth_A2.0.V2.4.5.json  vs_truth_A2.0.V2.4.6.json
batmobile/: __init__.py
benchmarks/: bench_registry.json  bench_spherical_harmonics.py  benchmark_e2e_mace.py  benchmark_fused_mp.py  benchmark_fused_sh_tp.py  benchmark_neighbor_list.py  sweep.py  (+6 more)
(+62 files in other folders)
